# human-activity-recognition

./: .gitignore  README.md  human-activity-detector.ipynb  pyproject.toml  test-app-paralel.py  test-app.py
