[project]
name = "ainya"
version = "0.1.0"
description = "Computer Vision for Creative Robotic"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.216",
]
